# agentid

./: .gitleaks.toml
.github/workflows/: secret-scan.yml
getagentid-pydantic/: README.md  pyproject.toml
getagentid-pydantic/getagentid_pydantic/: __init__.py  middleware.py  models.py
sdk/python/agentid/: did.py
specs/: ctef-verifier-attestation-v0.1.md
tests/: proof_report.json  verifier_attestation_fixture.json
